backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-app
  labels:
    app: backend
    env: production
spec:
  containers:
    - name: redis
      image: redis
