pods-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-app
  labels:
    app: web
    env: production
spec:
  containers:
    - name: nginx
      image: nginx
