private.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-nginx
  namespace: private
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
