public.yaml
apiVersion: v1
kind: Pod
metadata:
  name: public-nginx
  namespace: public
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
