public-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-nginx-service
  namespace: public
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
