service.web1.yaml
apiVersion: v1
kind: Service
metadata:
  name: web1
spec:
  selector:
    app: web1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
