service.web2.yaml
apiVersion: v1
kind: Service
metadata:
  name: web2
spec:
  selector:
    app: web2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
