ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: public
spec:
  rules:
    - host: public.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: public-nginx-service
                port:
                  number: 80
    - host: private.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: private-nginx-service
                port:
                  number: 80
